# agents

./: README.org  refs.bib
.auctex-auto/: refs.el
ca/: README.org
ca/lab/: README.md  eca.nlogo  logic.nlogo
intro/: README.org  hablar-complx.org
intro/.auctex-auto/: hablar-complx.el
lab/ants/: refs.bib  solucion.aux  solucion.bbl  solucion.bcf  solucion.blg  solucion.out  solucion.run.xml  solucion.tex  soluciones.blg
lab/ants/.auctex-auto/: refs.el  solucion.el
lab/ants/src/: README.md  SchellingAnalysis.ipynb  launch.py  pyproject.toml  requirements.txt
lab/ants/src/.ipynb_checkpoints/: Ant Analysis-checkpoint.ipynb  Schelling Analysis-checkpoint.ipynb
lab/ants/src/ants/: model.py  server.py
lab/ants/src/langton/: model.py  rules.py  server.py
lab/ants/src/shelling/: model.py  server.py
lab/ants/src/termites/: model.py  server.py
lab/automatas/: life.nlogo
lab/automatas/QuirozCastañeda/: readme.txt
lab/genes/: solucion.aux  solucion.out  solucion.tex
lab/genes/.auctex-auto/: solucion.el
lab/genes/Quiroz-Castañeda/Practica3/: README.md
lab/genes/src/: Queens.ipynb  SGA.ipynb  pyproject.toml
lab/genes/src/.ipynb_checkpoints/: SGA-checkpoint.ipynb
