[tool.poetry]
name = "bugs"
version = "0.1.0"
description = "complex bugs"
authors = ["Edgar Quiroz <eq24f02@protonma.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mesa = "^0.8.8"
jupyterlab = "^2.2.9"
pandas-bokeh = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
