[tool.poetry]
name = "genes"
version = "0.1.0"
description = "Genetic and evolving techniques"
authors = ["Edgar Quiroz <eq24f02@protonma.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.3"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
